# delicacy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  justfile  mypy.ini  playground.ipynb  playround.ipynb  pyproject.toml
delicacy/: config.py  create.py  defaults.py  excite.py  generate.py  main.py  prototyping.ipynb  view_palette.ipynb
delicacy/excite/: excite.py  helpers.py
delicacy/igen/: collection.py  igen.py
delicacy/saturn/: helpers.py  saturn.py
delicacy/svglib/: colors.py  point.py  style.py  transform.py  utils.py
delicacy/svglib/colors/: hsv.py  palette.py
delicacy/svglib/element/: element.py
delicacy/svglib/elements/: element.py  gradient.py  shapes.py  use.py
delicacy/svglib/elements/peripheral/: point.py  style.py  transform.py
delicacy/svglib/utils/: chain.py  transform.py  utils.py
tests/excite/: test_excite.py  test_helpers.py
tests/igen/: test_collection.py  test_igen.py
tests/saturn/: test_helpers.py  test_saturn.py
tests/svglib/: test_chain.py  test_elements.py  test_gradient.py  test_palette.py  test_point.py  test_shapes.py  test_style.py  test_transform.py  test_use.py  test_utils.py
tests/svglib/colors/: test_hsv.py  test_palette.py
tests/svglib/element/: test_elements.py  test_gradient.py  test_shapes.py  test_use.py
tests/svglib/element/peripheral/: test_point.py  test_style.py  test_transform.py
tests/svglib/utils/: test_chain.py  test_utils.py
