[tool.poetry]
name = "delicacy"
version = "0.1.0"
description = ""
authors = ["nt54hamnghi <hamnghi250699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
attrs = "22.1.*"
bitstring = "3.1.*"
decorator = "5.1.*"
cytoolz = "0.12.*"
lxml = "4.9.*"
Pillow = "9.2.*"


[tool.poetry.dev-dependencies]
pytest = "7.1.*"
black = "22.3.*"
mypy = "^0.982"
lxml-stubs = "0.4.*"
types-decorator = "^5.1.8.1"
types-Pillow = "9.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
