[tool.poetry]
name = "delicacy"
version = "0.1.0"
description = ""
authors = ["nt54hamnghi <hamnghi250699@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.*"
attrs = "22.1.*"
bitstring = "3.1.*"
decorator = "5.1.*"
cytoolz = "0.12.*"
fastapi = "0.88.0"
lxml = "4.9.*"
Pillow = "9.2.*"
Wand = "0.6.10"
uvicorn = "^0.20.0"


[tool.poetry.dev-dependencies]
black = "22.3.*"
lxml-stubs = "0.4.*"
mypy = "^0.982"
notebook = "6.4.12"
pytest = "7.1.*"
types-decorator = "^5.1.8.1"
types-Pillow = "9.2.1"


[tool.mypy]
python_version = "3.10"
files = "/windows10/Users/hamng/Desktop/projects/delicacy/delicacy/*.py"
disallow_incomplete_defs = false
no_implicit_optional= true
pretty = true


[[tool.mypy.overrides]]
module = [
    "bitstring.*",
    "wand.*",
    "cytoolz.*",
    "config"
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
