[tool.poetry]
name = "delicacy"
version = "0.1.0"
description = ""
authors = ["nt54hamnghi <hamnghi250699@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.*"
attrs = "22.1.*"
bitstring = "3.1.*"
decorator = "5.1.*"
cytoolz = "0.12.*"
fastapi = "0.96.*"
lxml = "4.9.*"
Pillow = "10.1.*"
Wand = "0.6.10"
uvicorn = "^0.20.0"


[tool.poetry.dev-dependencies]
black = "22.3.*"
lxml-stubs = "0.4.*"
mypy = "^0.982"
pytest = "7.2.*"
types-decorator = "^5.1.8.1"
types-Pillow = "9.2.1"
coverage = "^7.1.0"
pre-commit = "^3.2.2"


[tool.mypy]
python_version = "3.11"
# output
pretty = true
# include
files = ["delicacy/**/*.py"]
# optional
no_implicit_optional = true
# function defs
check_untyped_defs = true
allow_untyped_defs = true
allow_incomplete_defs = true
allow_any_explicit = true
# warning
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
# strictness
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "bitstring.*",
    "wand.*",
    "cytoolz.*",
    "config"
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [poetry.run.script]
# # scripts for developments (mimic package.json)
# build = 'poetry build'
# cov = 'coverage run --branch -m pytest && coverage report --skip-empty --show-missing'
# dev = 'uvicorn delicacy.main:app --reload'
# test = 'pytest'
# test-verbose = 'pytest -vs'
# test-lastfail = 'pytest --lf'
# test-debug = 'pytest -x --pdb'